openpearl-code/testsuite/must_not_compile/00_basics/007_multiple_module_statement.expect
007_multiple_module_statement.prl:3:0: ERROR : Syntax error :mismatched input 'MODULE' expecting {'MODEND', 'SYSTEM', 'PROBLEM', '__cpp__', '__cpp'}
MODULE(m2);
     ^
