openpearl-code/testsuite/must_not_compile/00_basics/007_multiple_module_statement.prl
MODULE(m1);

MODULE(m2);
MODEND;
